--- a/examples/spinbutton/datepicker-spinbuttons.html
+++ b/examples/spinbutton/datepicker-spinbuttons.html
@@ -320,8 +320,8 @@
             <th scope="row"><code>aria-hidden="true"</code></th>
             <td>
               <ul>
-                <li><code>div > .next</code></li>
-                <li><code>div > .previous</code></li>
+                <li><code>div.next</code></li>
+                <li><code>div.previous</code></li>
               </ul>
             </td>
             <td>
@@ -334,6 +334,7 @@
 
     <section>
       <h3 id="rps_label_3">Increment and Decrement Buttons (Day, Month and Year)</h3>
+
       <p>Each spin button has a corresponding increment and decrement buttons for supporting accessibility on touch devices.   The buttons are not part of the tab order of the page or respond to keyboard commands, but still need to be described to assistive technologies.</p>
       <table aria-labelledby="rps_label_3 rps_label" class="data attributes">
         <thead>
