Add disclosure menu example for issue 1028 (pull #1070)
To resolve issue #1028, adds a disclosure pattern example that illustrates a simple site navigation bar with dropdowns.
The navigation bar is a  set of disclosure buttons that show and hide dropdown lists of links.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1216,6 +1216,7 @@
         <ul>
           <li><a href="examples/disclosure/disclosure-img-long-description.html">Disclosure (Show/Hide) of Image Description</a></li>
           <li><a href="examples/disclosure/disclosure-faq.html">Disclosure (Show/Hide) of Answers to Frequently Asked Questions</a></li>
+          <li><a href="examples/disclosure/disclosure-navigation.html">Disclosure (Show/Hide) for Navigation Menus</a></li>
         </ul>
       </section>
 
