--- a/examples/index.html
+++ b/examples/index.html
@@ -270,6 +270,7 @@
       <li><a href="../examples//combobox/aria1.1pattern/listbox-combo.html">ARIA 1.1 Combobox with Listbox Popup  </a></li>
       <li><a href="../examples//disclosure/disclosure-faq.html"> Disclosure (Show/Hide) for Answers to Frequently Asked Questions </a></li>
       <li><a href="../examples//disclosure/disclosure-img-long-description.html"> Disclosure (Show/Hide) for Image Description </a></li>
+      <li><a href="../examples//disclosure/disclosure-navigation.html">Disclosure Pattern for Navigation Menus</a></li>
       <li><a href="../examples//menu-button/menu-button-actions-active-descendant.html">Actions Menu Button  Using aria-activedescendant </a></li>
       <li><a href="../examples//menu-button/menu-button-actions.html">Actions Menu Button  Using element.focus() </a></li>
       <li><a href="../examples//menu-button/menu-button-links.html">Navigation Menu Button  </a></li>
@@ -298,6 +299,7 @@
       <li><a href="../examples//combobox/aria1.1pattern/listbox-combo.html">ARIA 1.1 Combobox with Listbox Popup  </a></li>
       <li><a href="../examples//disclosure/disclosure-faq.html"> Disclosure (Show/Hide) for Answers to Frequently Asked Questions </a></li>
       <li><a href="../examples//disclosure/disclosure-img-long-description.html"> Disclosure (Show/Hide) for Image Description </a></li>
+      <li><a href="../examples//disclosure/disclosure-navigation.html">Disclosure Pattern for Navigation Menus</a></li>
       <li><a href="../examples//listbox/listbox-collapsible.html">Collapsible Dropdown Listbox  </a></li>
       <li><a href="../examples//menu-button/menu-button-actions-active-descendant.html">Actions Menu Button  Using aria-activedescendant </a></li>
       <li><a href="../examples//menu-button/menu-button-actions.html">Actions Menu Button  Using element.focus() </a></li>
