--- a/examples/disclosure/disclosure-img-long-description.html
+++ b/examples/disclosure/disclosure-img-long-description.html
@@ -36,6 +36,9 @@
     <li>
       <a href="disclosure-faq.html">Example Disclosure (Show/Hide) for Answers to Frequently Asked Questions</a>
     </li>
+    <li>
+      <a href="disclosure-navigation.html">Example Disclosure for Navigation Menus</a>
+    </li>
   </ul>
   <section>
     <h2 id="ex_label">Example</h2>
