--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -53,28 +53,28 @@
       <div class="format" role="toolbar" aria-label="Text Formatting" aria-controls="textarea1">
           <div class="group characteristics">
             <button
-                class="item bold"
+                class="item bold popup"
                 aria-pressed="false"
-                aria-label="bold"
                 value="bold"
                 tabindex="0">
-              <span class="fas fa-bold"></span>
+              <span class="fas fa-bold" aria-hidden="true"></span>
+              <span class="popup-label">Bold</span>
             </button>
             <button
-                class="item italic"
-                aria-label="Italic"
+                class="item italic popup"
                 aria-pressed="false"
                 value="italic"
                 tabindex="-1">
-              <span class="fas fa-italic"></span>
+              <span class="fas fa-italic" aria-hidden="true"></span>
+              <span class="popup-label">Italic</span>
             </button>
             <button
-                class="item underline"
-                aria-label="Underline"
+                class="item underline popup"
                 aria-pressed="false"
                 value="underline"
                 tabindex="-1">
-              <span class="fas fa-underline"></span>
+              <span class="fas fa-underline" aria-hidden="true"></span>
+              <span class="popup-label">Underline</span>
             </button>
           </div>
           <div class="group"
@@ -82,48 +82,45 @@
                aria-label="Text Alignment">
             <button
                 role="radio"
-                class="item align-left"
-                aria-label="Text align left"
+                class="item align-left popup"
                 aria-checked="true"
                 tabindex="-1">
-              <span class="fas fa-align-left"></span>
+              <span class="fas fa-align-left" aria-hidden="true"></span>
+              <span class="popup-label">Text Align Left</span>
             </button>
             <button
                 role="radio"
-                class="item align-center"
-                aria-label="Text align center"
+                class="item align-center popup"
                 aria-checked="false"
                 tabindex="-1">
-              <span class="fas fa-align-center"></span>
+              <span class="fas fa-align-center" aria-hidden="true"></span>
+              <span class="popup-label">Text Align Center</span>
             </button>
             <button
                 role="radio"
-                class="item align-right"
-                aria-label="Text align right"
+                class="item align-right popup"
                 aria-checked="false"
                 tabindex="-1">
-              <span class="fas fa-align-right"></span>
+              <span class="fas fa-align-right" aria-hidden="true"></span>
+              <span class="popup-label">Text Align Right</span>
             </button>
           </div>
           <div class="group">
             <button
                 class="item copy"
                 aria-disabled="true"
-                title="Copy selected text from textarea"
                 tabindex="-1">
               Copy
             </button>
             <button
                 class="item paste"
                 aria-disabled="true"
-                title="Paste last copied or cut text to textarea"
                 tabindex="-1">
                 Paste
             </button>
             <button
                 class="item cut"
                 aria-disabled="true"
-                title="Cut selected text from textarea"
                 tabindex="-1">
                 Cut
             </button>
@@ -173,7 +170,7 @@
 
           <div class="group">
             <label class="input"><input id="checkbox" class="item nightmode" type="checkbox" tabindex="-1"> Night Mode</label>
-            <a id="link" class="item link" href="help.html" tabindex="-1" title="Opens help document in a new window">Help</a>
+            <a id="link" class="item link" href="help.html" tabindex="-1">Help</a>
           </div>
       </div>
       <label for="textarea1" class="hidden">Text Sample</label><br>
@@ -220,6 +217,13 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
       <li>
         When a toolbar item has focus, its border is highlighted and the background color of the button also changes.
       </li>
+    </ul>
+    <h3>Button Popup Labels</h3>
+    <p>The bold, italic, underline, and text align buttons have popup labels that implement the requirements of <a href="https://www.w3.org/TR/WCAG21/#content-on-hover-or-focus">WCAG Success Criterion 1.4.13 Content on Hover or Focus</a>:</p>
+    <ul>
+      <li>When a bold, italic, underline, or text align button receives focus or mouse hover, a popup appears above the button revealing its text label.</li>
+      <li>The popup label remains visible when the pointer hovers over the label content.</li>
+      <li>Pressing <kbd>Esc</kbd> hides the popup label .</li>
     </ul>
   </section>
 
@@ -273,6 +277,10 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
           <tr data-test-id="toolbar-end">
             <th><kbd>End</kbd></th>
             <td>Moves focus to the last control.</td>
+          </tr>
+          <tr data-test-id="toolbar-toggle-esc">
+            <th><kbd>ESC</kbd></th>
+            <td>If a button popup label is visible, hides it.</td>
           </tr>
         </tbody>
       </table>
@@ -482,8 +490,8 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
           </tr>
         </thead>
         <tbody>
-          <tr data-test-id="toolbar-checkbox-enter-or-space">
-            <th><kbd>Enter</kbd><br><kbd>Space</kbd></th>
+          <tr data-test-id="toolbar-checkbox-space">
+            <th><kbd>Space</kbd></th>
             <td>Toggles the state of the checkbox.</td>
           </tr>
         </tbody>
@@ -607,17 +615,6 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
           </tr>
         </thead>
         <tbody>
-          <tr data-test-id="toolbar-button-aria-label">
-            <td></td>
-            <th scope="row"><code>aria-label="LABEL_STRING"</code></th>
-            <td><code>button</code></td>
-            <td>
-              <ul>
-                <li>Provides an accessible name.</li>
-                <li>Used because the button does not contain text content that can serve as a label.</li>
-              </ul>
-            </td>
-          </tr>
           <tr data-test-id="toolbar-button-aria-pressed">
             <td></td>
             <th scope="row"><code>aria-pressed="true"</code></th>
@@ -629,6 +626,12 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
             <th scope="row"><code>aria-pressed=<q>false</q></code></th>
             <td><code>button</code></td>
             <td>Indicates the button is a toggle and that the styling controlled by the button has <strong>NOT</strong> been applied.</td>
+          </tr>
+          <tr data-test-id="toolbar-button-aria-hidden">
+            <td></td>
+            <th scope="row"><code>aria-hidden="true"</code></th>
+            <td><code>span</code></td>
+            <td>Hides the icon character from being included in the accessible name.</td>
           </tr>
         </tbody>
       </table>
@@ -668,13 +671,12 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
             <th scope="row"><code>radio</code></th>
             <td></td>
             <td><code>button</code></td>
-            <td>Identifies the <code>button</code> element  as a <code>radio</code> element.</td>
-          </tr>
-          <tr data-test-id="toolbar-radio-aria-label">
-            <td></td>
-            <th scope="row"><code>aria-label="ALIGNMENT_NAME_STRING"</code></th>
-            <td><code>button</code></td>
-            <td>Provides an accessible name for the radio button that indicates the type of text alignment it performs.</td>
+            <td>
+              <ul>
+                <li>Identifies the <code>button</code> element  as a <code>radio</code> button.</li>
+                <li>The accessible name comes from the child text content of the <code>button</code> element.</li>
+              </ul>
+            </td>
           </tr>
           <tr data-test-id="toolbar-radio-aria-checked">
             <td></td>
@@ -697,6 +699,12 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
                 <li>All radio buttons in the group, except for one,  have <code>aria-checked</code> set to <code>false</code>.</li>
               </ul>
             </td>
+          </tr>
+          <tr data-test-id="toolbar-radio-aria-hidden">
+            <td></td>
+            <th scope="row"><code>aria-hidden="true"</code></th>
+            <td><code>span</code></td>
+            <td>Hides the icon character from being included in the accessible name.</td>
           </tr>
         </tbody>
       </table>
@@ -732,7 +740,6 @@ But, in a larger sense, we can not dedicate, we can not consecrate, we can not h
           </tr>
         </tbody>
       </table>
-      <p>Note: In addition to the ARIA attributes, the accessible design includes the HTML <code>title</code> attribute for providing accessible descriptions of button actions.</p>
     </section>
 
     <section>
