--- a/examples/dialog-modal/datepicker-dialog.html
+++ b/examples/dialog-modal/datepicker-dialog.html
@@ -14,7 +14,7 @@
 <script src="../js/app.js"></script>
 
 <link href="css/datepicker.css" rel="stylesheet">
-<script src="js/datepickerDay.js" type="text/javascript"></script>
+<script src="js/datepicker-day.js" type="text/javascript"></script>
 <script src="js/datepicker.js" type="text/javascript"></script>
 <script src="js/calendar-button.js" type="text/javascript"></script>
 </head>
@@ -615,7 +615,7 @@
         <ul>
           <li><a href="js/calendar-button.js" type="text/javascript">calendar-button.js</a></li>
           <li><a href="js/datepicker.js" type="text/javascript">datepicker.js</a></li>
-          <li><a href="js/datepickerDay.js" type="text/javascript">datepickerDay.js</a></li>
+          <li><a href="js/datepicker-day.js" type="text/javascript">datepicker-day.js</a></li>
         </ul>
       </li>
     </ul>
