Editorial revisions to introduction

--- a/examples/carousel/carousel-1.html
+++ b/examples/carousel/carousel-1.html
@@ -49,8 +49,8 @@
       <section>
         <h2>View Options</h2>
         <ul>
-          <li><a href="carousel-1.html">Carousel controls and captions over image</a>, this option is not as accessible since the controls are more difficult to find and the captions are more difficult to read when they are over the rotating images.</li>
-          <li><a href="carousel-1.html?moreaccessible">Carousel controls and captions above and below the image</a>, this option is the preferred method since the controls are easier to find and the captions are easier to read.</li>
+          <li><a href="carousel-1.html">Carousel controls and captions displayed on image</a>: This option is less accessible than the other option because the controls are harder to perceive and captions are more difficult to read with rotating images behind them.</li>
+          <li><a href="carousel-1.html?moreaccessible">Carousel controls and captions displayed above and below the image</a>: This option is preferable because controls and captions are easier to perceive.</li>
         </ul>
       </section>
 
