--- a/examples/carousel/carousel-1.html
+++ b/examples/carousel/carousel-1.html
@@ -47,7 +47,7 @@
       </p>
 
       <section>
-        <h2>View Options</h2>
+        <h2>Example View Options</h2>
         <ul>
           <li><a href="carousel-1.html">Carousel controls and captions displayed on image</a>: This option is less accessible than the other option because the controls are harder to perceive and captions are more difficult to read with rotating images behind them.</li>
           <li><a href="carousel-1.html?moreaccessible">Carousel controls and captions displayed above and below the image</a>: This option is preferable because controls and captions are easier to perceive.</li>
@@ -250,12 +250,14 @@
 
       <section>
         <h2>Accessibility Features</h2>
-
-        <h3>Pausing Automatic Slide Rotation</h3>
-        <p>Pausing the automatic rotation of slides is important for people using screen readeers, since moving the reading cursor into the auto-rotating content will be disorienting.   When the cursor is in content that is unexpectantly hidden the screen reader moves the reading cursor back to the top of the page.   This sudden jump will be difficult for the screen reader user to understand.   People with low vision and leanring disabilities that effect visual processing or reading also benefit from being able to stop the rotation of the images by giving them more time and control to explore the image and read the slide captions.</p>
-
-        <p>The following features are included in this example to pause the rotation:</p>
-
+        <h3>Controlling Automatic Slide Rotation</h3>
+        <p>
+          Users can stop and start slide rotation, which is an essential aspect of accessibility of the carousel for a variety of people with disabilities.
+          People with low vision or a cognitive disability that effects visual processing or reading benefit from being able to control slide rotation so they have sufficient time to explore slide content.
+          Similarly, since screen reader users cannot perceive automatic rotation, it can make reading the page confusing and disorienting.
+          For example, when slides are automatically rotating, a screen reader user may read an element on slide one, execute a screen reader command to read the next element, and, instead of hearing the next element on slide one, hear an element from slide 2 without any knowledge that the element just announced is from an entirely new context.
+        </p>
+        <p>This example includes the following features for giving users control over slide rotation:</p>
         <ul>
           <li>
             Hovering the mouse over any carousel content pauses automatic rotation.
@@ -268,26 +270,25 @@
           <li>The carousel also contains a rotation control button that can stop and start automatic rotation.
             <ul>
               <li>The rotation control button is the first element in the screen reader reading order.</li>
-              <li>The pause button is always visible so sighted users can also benefit from stoping the auto-rotation of images.</li>
-              <li>If the carousel is rotating, the button is labeled "Stop Automatic Slide Show," informing screen reader users that the slides are changing in addition to providing a way to stop the changes.</li>
-              <li>If the carousel is not rotating, the button is labeled "Start Automatic Slide Show."</li>
+              <li>The rotation control button is always visible so it is available to all users whether they are interacting via a mouse, keyboard, assistive technology, or touch.</li>
+              <li>If the carousel is rotating, its accessible name is <q>Stop Automatic Slide Show</q>, informing screen reader users that the slides are changing in addition to providing a way to stop the changes.</li>
+              <li>If the carousel is not rotating, the accessible name of the button is <q>Start Automatic Slide Show</q>.</li>
               <li>If a user has activated the button to stop the show, the rotation will only restart if the button is activated. Moving keyboard focus or the mouse out of the carousel will not restart rotation.</li>
               <li>If keyboard focus is inside the carousel, or if the mouse is hovering over the carousel, the button is disabled; it cannot be used to start rotation.</li>
             </ul>
           </li>
         </ul>
-
         <h3>Color Contrast of Text and Rotation Controls</h3>
-
-        <p>In the view with the controls and captions on top of the image a major issue is color contrast with the controls and text with the image in the background.  The following was implemented for this view to meet WCAG 2.1 color contrast requirements:</p>
-
+        <p>
+          In the view of this carousel where the controls and captions are displayed on top of the image, the background images can cause color contrast for the controls and text to become insufficient.
+          This view includes the following features to meet WCAG 2.1 color contrast requirements:
+        </p>
         <ul>
           <li>
-            To improve the identification of the pause, next and previous slide buttons when they are visually rendered over the carousel images, the buttons have forground and background color that meet the WCAG 2.1 color contrast requirements.  SVG images are user to make the focus styling highly visible when a control receives keyboard focus.
+            When the rotation control, next slide,  and previous slide buttons are rendered on top of the carousel images, the buttons have forground and background colors that meet WCAG 2.1 color contrast requirements.
+            In addition, the focus styling uses SVG images that make the focus indicator highly visible when a control receives keyboard focus.
           </li>
-          <li>
-            To improve readability of the caption text and content, the transparency of the caption area is decreased to to meet the WCAG 2.1 color contrast requirements.
-          </li>
+          <li>The transparency of the caption area is decreased so the caption text meets the WCAG 2.1 color contrast requirements.</li>
         </ul>
       </section>
 
@@ -309,8 +310,6 @@
                   <ul>
                     <li>Moves focus through interactive elements in the carousel.</li>
                     <li>Rotation control, previous slide, and next slide buttons precede the slide content in the <kbd>Tab</kbd> sequence.</li>
-                    <li>The rotation control button moves on screen when it receives keyboard focus and off screen when it is not focused.</li>
-                    <li>Off-screen positioning allows it to be available to screen reader users when not focused.</li>
                   </ul>
                 </td>
               </tr>
