Add live region information to accessibility features section.

--- a/examples/carousel/carousel-1.html
+++ b/examples/carousel/carousel-1.html
@@ -290,6 +290,14 @@
           </li>
           <li>The transparency of the caption area is decreased so the caption text meets the WCAG 2.1 color contrast requirements.</li>
         </ul>
+        <h3>Screen Reader Announcement of Slide Changes</h3>
+        <p>
+          When automatic rotation is turned off, the carousel slide content is included in a live region.
+          This makes it easier for screen reader users to scan through the carousel slides.
+          When screen reader users activate the next or previous slide button , the new slide content is announced, giving users immediate feedback that helps them determine whether or not to interact with the content.
+          Very importantly, if automatic rotation is turned on, the live region is disabled.
+          If it were not, the page would be come unusable as announcements of the continuously changing content constantly interrupt anything else the user is reading.
+        </p>
       </section>
 
       <section>
