Add link to date picker dialog example from laert dialog example

--- a/examples/dialog-modal/alertdialog.html
+++ b/examples/dialog-modal/alertdialog.html
@@ -58,6 +58,7 @@
       <ul>
         <li><a href="../alert/alert.html">Alert</a>: a basic alert.</li>
         <li><a href="dialog.html">Modal Dialog Example</a>: An example demonstrating multiple layers of modal dialogs with both small and large amounts of content.</li>
+        <li><a href="datepicker-dialog.html">Date Picker Dialog example</a>: Demonstrates a dialog containing a calendar grid for choosing a date.</li>
       </ul>
       <section>
         <h2 id="ex_label">Example</h2>
