--- a/examples/dialog-modal/datepicker-dialog.html
+++ b/examples/dialog-modal/datepicker-dialog.html
@@ -41,6 +41,10 @@
       If the input field is empty or does not contain a valid date when the dialog is opened, the current date is focused in the calendar.
       Otherwise, focus is placed on the day in the calendar that matches the value of the date input field.
     </p>
+    <p>Similar examples include:</p>
+    <ul>
+      <li><a href="dialog.html">Modal Dialog Example</a>: An example demonstrating multiple layers of modal dialogs with both small and large amounts of content.</li>
+    </ul>
   <section>
     <h2 id="ex_label">Example</h2>
 
