--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1097,7 +1097,7 @@
       <section class="notoc">
         <h4>Examples</h4>
         <ul>
-          <li><a href="examples/dialog-modal/dialog.html">Modal Dialog Example</a>: Demonstrates dialogs containing long scrolling content and dialogs layered on top of dialogs.</li>
+          <li><a href="examples/dialog-modal/dialog.html">Modal Dialog Example</a>: Demonstrates multiple layers of modal dialogs with both small and large amounts of content.</li>
           <li><a href="examples/dialog-modal/datepicker-dialog.html">Date Picker Dialog Example</a>: Demonstrates a dialog containing a calendar grid for choosing a date.</li>
         </ul>
       </section>
